# user-kernel-syscall-hook

./: .gitignore  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/.cargo/: config
agent/src/: allocator.rs  lib.rs
agent32/: Cargo.toml
agent32/.cargo/: config
agent32/src/: allocator.rs  lib.rs
client/: Cargo.toml
client/src/: main.rs
driver/: Cargo.toml  DriverCertificate.cer  Makefile.toml  build.rs  rust-toolchain
driver/.cargo/: config
driver/src/: hooks.rs  injector.rs  kapc.rs  lib.rs  section.rs
infinity_hook/: Cargo.toml
infinity_hook/src/: ckcl.rs  lib.rs  scan.rs  stack.rs
macros/: Cargo.toml
macros/src/: lib.rs
testing/: Cargo.toml
testing/src/: main.rs
